# tetradactyl

./: .clang-tidy  .gdbinit  .gdbinit.debug  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  Makefile  README.md  demo.ui  gio-demo.c  glib-demo.c  gobject-demo.c  gtk-demo.c  gtk-demo.ui  gtk-utils.c  gtk-utils.h  hints.css  init.c  intercepted-symbols.c  keypress-demo.c  launch.sh  meson.build  nodemon.json  replaced-symbols  tetradactyl-gtk-demo.c  tetradactyl-gtk.c  tetradactyl.gresource.xml  tetradactyl.h
.snippets/: cpp.snippets
cmake/: CodeCoverage.cmake  setup.cmake
common/: CMakeLists.txt  backtrace.cpp  backtrace.h  tetradactyl-config.h.in
docs/: gtk.md  notes.md  qt.md
gtk4/: .gdbinit  .gdbinit.debug  Makefile  README.md  gtk-demo.c  gtk-demo.gresource.xml  gtk-demo.ui  gtk-utils.c  gtk-utils.h  hints.css  init.c  init.h  intercepted-symbols.c  meson.build  tetradactyl-gtk.c  tetradactyl.gresource.xml  tetradactyl.h
gtk4/scripts/: signals.bt  signals.gdb
launcher/: CMakeLists.txt  abi.cpp  abi.h  app.cpp  app.h  applicationmodel.cpp  applicationmodel.h  applicationtablemodel.cpp  applicationtablemodel.h  common-probe.cpp  common.cpp  common.h  config.cpp  config.h  dynamic-probe.cpp  launcher.cpp  launcher.h  launcher.qrc  launcherwindow.ui  libnames.h  main.cpp  probe.cpp  probe.h  tablemodel.cpp  tablemodel.h  utils.cpp  utils.h
launcher/completions/: _tetradactyl
qt/: CMakeLists.txt  action.cpp  action.h  actionmacros.h  commandline.cpp  commandline.h  commands.cpp  commands.h  common.cpp  common.h  controller.cpp  controller.h  filter.cpp  filter.h  hint.cpp  hint.h  logging.cpp  logging.h  modelviewproxies.cpp  overlay.cpp  overlay.h  probe.cpp  probe.h  version.h
qt6/: CMakeLists.txt  Makefile  README.md  action.cpp  action.h  common.cpp  common.h  controller.cpp  controller.h  filter.cpp  filter.h  hint.cpp  hint.h  hints.css  inject.cpp  inject.h  logging.cpp  logging.h  overlay.cpp  overlay.h  probe.cpp  probe.h  pushbutton.cpp  qabstractbutton.cpp  tetradactyl-qt.cpp  tetradactyl-qt5-stub.cpp  tetradactyl.qrc  toolbutton.cpp
qt6/calc-demo/: CMakeLists.txt  calculator.cpp  calculator.h  main.cpp
scripts/: build.sh  colourize_output.sh  ensure-copyright-notice.sh  ghettho-include-what-you-use  kill-tetradactyl-data.sh  signals.bt  signals.gdb
tests/: CMakeLists.txt  ProcessLoadedLib.sh
tests/demos/: CMakeLists.txt
tests/demos/calculator/: CMakeLists.txt  button.cpp  button.h
tests/demos/dynamic-load/: CMakeLists.txt  main.cpp  ui.cpp
tests/launcher/: CMakeLists.txt  app_test.cpp  applicationmodel_test.cpp  applicationtablemodel.cpp  common.cpp  common.h  functionallauncher.cpp  launcher_e2e_test.cpp  probe_test.cpp  utils_test.cpp
tests/probing/: CMakeLists.txt
tests/qt/: CMakeLists.txt  basic_test.cpp  basiccontroller_test.cpp  combobox_test.cpp  common.cpp  common.h  controller.cpp  editable_test.cpp  menubaraction_test.cpp  prompt_test.cpp  tabbar_test.cpp  tableview_test.cpp  treeview_test.cpp  weak-main.h
tests/qt6/: CMakeLists.txt  common.cpp  common.h  controller.cpp
